Paginated trips list completed
